--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<button mat-raised-button id='btn'
+<!-- <button mat-raised-button id='btn'
 style="margin: 50px" color="primary" 
-(click)="displayOverlay($event)">Display overlay</button>
+(click)="displayOverlay($event)">Display overlay</button> -->
+
+<input id="btn" type="text" [formControl]="search" style="margin: 50px" color="primary" >
